# infinite-runner

./: CMakeLists.txt  README.md  project_builder.sh
resources/shaders/: blur.fs
src/: main.cpp
